--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,16 @@
-
+#custom your user, password database
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5InnoDBDialect
 spring.datasource.url=jdbc:mysql://localhost:3307/preprojectdb
 spring.datasource.username=root
 spring.datasource.password=root
 
+#spring.jpa.hibernate.ddl-auto=create #for the first create table
 spring.jpa.hibernate.ddl-auto=update
 
-
+#custom your port
 server.port=8080
 
-#Oauth2 configure
+#Oauth2 configure(use your id, secret api)
 spring.security.oauth2.client.registration.google.client-id= 1081834741943-aptj0i7p3t2a1vq96hqokd9br56g010k.apps.googleusercontent.com
 spring.security.oauth2.client.registration.google.client-secret= rnvDOhdDm6cYeTTahKmX25mX
 
